--- a/index.html
+++ b/index.html
@@ -18,29 +18,19 @@
 
         <title>Home</title>
     </head>
-    <body>
-        <div class="welcomeBox">
-            <div class="locationSelector">
-                <div class="locationButtons">
-                    <button class="africanButton" id="locationsButton">Africa</button>
-                    <button class="europeanButton" id="locationsButton">Europe</button>
-                    <button class="americasButton" id="locationsButton">Americas</button>
-                </div>
-                <div class="exploreButton" >
-                    <button type="submit" id="locationsButton"></i>Explore</button>
-                   
-                </div>
+    <body class="mainContent">
+        <header class="navbar">
+            <!-- not used yet -->
+        </header>
+        <div class="buttons" name="selectionbutton">
+            <a href="./html/africa.html" class="button" tabindex="1">Africa</a>
+            <a href="./html/americas.html" class="button" tabindex="2">Americas</a>
+            <a href="./html/europe.html" class="button" tabindex="3">Europe</a>
+        </div> 
 
-    <script>
-        const buttonList = document.querySelectorAll("#locationsButton");
-        for (let i = 0; i < buttonList.length; i++){
-            buttonList[i].onmouseover = function(){buttonList[i].style.cssText = "border: solid black; color: white; background-position: left;"};
-            buttonList[i].onmouseout = function(){buttonList[i].style.cssText = "border: dotted black;"};
-        }
 
-       
 
-    </script>
+    <script src="./static/js/app.js"></script>
 
 
 
@@ -56,18 +46,4 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
         -->
     </body>
-
-    <!--                 <div class="africanContent">
-                    <a href="#">Zambia</a>
-                    <a href="#">South Africa</a>
-                </div>
-                <div class="europeanContent">
-                    <a href="#">Italy</a>
-                </div>
-                <div class="americasContent">
-                    <a href="#">Costa Rica</a>
-                    <a href="#">USA</a>
-                </div>
-            </div>
-        </div> -->
 </html>
